# billiards-shots-api

./: CMakeLists.txt  shots_api.service
src/: DetailedLayoutParams.h  ShotInfoParams.h  ShotListParams.h  ShotQueryParams.h  ShotsIterator.h  UniformStreamReceiver.h  basic_calculations.h  calculate_shot.h  linear_solve.h  linear_system_2x2.h  linear_system_3x3.h  list_shots.h  sage_generated_glance.h  shot_calculations.h  shots_api.cpp  solve_quadratic_2x2.h  target_calculations.h
src/math/: bank.h  high_order_polys.h  orient_pocket.h  rolling_glance.h  rolling_glance_to_pocket.h  rolling_glance_to_pocket.old  script2.h  stun_glance.h
src/shot_calculation/: AssignmentStatus.h  basic_calculations.h  cue.h  cueing.h  kiss.h  pocket.h  rail.h  rolling_kiss.h  shot.h  shot_calculations.h  step_info.h  strike.h  stun_kiss.h
